--- a/scrimba projects/password_generator/css/styles.css
+++ b/scrimba projects/password_generator/css/styles.css
@@ -2,23 +2,65 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
+/* :root represents the <html> */
+:root {
+    --dark-background-color: #111111;
+    --dark-background-color-alt: #222222;
+    --dark-trim-color: #333333;
+    --dark-text-color: #eeeeee;
+}
 
 body {
+    /* Light Theme */
+    --background-color: #ffffff;
+    --background-color-alt: #eeeeee;
+    --trim-color: #dddddd;
+    --text-color: #333333;
+
+    --primary-color: #009578;
+    --font-family: 'Inter', sans-serif;
+
+    color: var(--text-color);
+    background: var(--background-color);
+    font-family: var(--font-family);
+
     margin: 0;
-    background-color: #ECFDF5;
-    font-family: 'Inter', sans-serif;
+    max-width: 100%;
+    min-height: 90vh;
 }
 
-.darkmode {
-    background-color: #1F2937;
-    color: #6B7280;
+/* use off css preprocessor */
+/* if media is prefer dark theme, then auto the website theme to dark */
+@media (prefers-color-scheme: dark) {
+    body.theme-auto {
+        --background-color: var(--dark-background-color);
+        --background-color-alt: var(var(--dark-background-color-alt));
+        --trim-color: var(--dark-trim-color);
+        --text-color: var(--dark-text-color);
+    }
 }
 
-h1 {
+body.theme-dark {
+    /* Dark Theme */
+    --background-color: var(--dark-background-color);
+    --background-color-alt: var(var(--dark-background-color-alt));
+    --trim-color: var(--dark-trim-color);
+    --text-color: var(--dark-text-color);
+}
+
+h1.theme-light {
     font-family: 'Karla', sans-serif;
     color: #2B283A;
     font-size: 40px;
 }
+
+h2 {
+	margin: 10px 0 20px;
+	text-align: center;
+}
+
 
 span {
     color: #4ADF86;
@@ -26,10 +68,11 @@ span {
 
 .header {
     display: flex;
-    flex-direction: column;
-    justify-content: left;
+    flex-direction: row;
+}
 
-    margin: 114px auto auto 52px;
+.container {
+    margin: auto auto;
 }
 
 .header p {
@@ -40,7 +83,7 @@ span {
     margin-bottom: 10px;
 }
 
-button {
+.btn {
     width: 191px;
     height: 42px;
     background: #10B981;
@@ -53,20 +96,298 @@ button {
     border: none;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 6px;
-    margin: 50px;
+    margin: 50px 0;
+}
+
+button {
+    cursor: pointer;
 }
 
 .separator {
-    margin: auto auto auto 52px;
+    margin: 50px auto;
     width: 90%;
     border-bottom: 1px solid #2F3E53;;
 }
 
-.footer {
-    margin: 52px auto auto 52px;
-    border: 1px solid #2F3E53;;
+.result-container {
+    margin: 52px auto auto 32px;
+    display: flex;
+    justify-content: center;
 }
 
-.new-pwd {
+.select-theme {
+    margin: 20px;
+    display: flex;
+    justify-content: right;
+    flex-direction: row;
+}
 
+.select__input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 7px 14px;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: var(--text-color);
+    font-weight: 500;
+    font-family: var(--font-family);
+    margin: auto 0;
+}
+
+.select__input option {
+    color: #000000;
+}
+
+.generated_password {
+    width: 211px;
+    height: 39px;
+    background: #273549;
+    border-radius: 6px;
+    
+    margin: 5px;
+    padding: 5px;
+
+    color: white;
+    font-family: 'Inter', sans-serif;
+    
+    font-size: 16px;
+    font-weight: 500px;
+    line-height: 32px;
+    color: #55F991;
+    
+    text-align: center;
+}
+
+.message-result {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.message {
+    margin: 30px;
+    font-size: 20px;
+    text-align: center;
+    color: #55F991;
+}
+
+.result {
+    display: flex;
+    margin: 0 24px;
+    color: #55F991;
+}
+
+.clipboard {
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	padding: 8px 12px;
+	background-color: #3B3B98;
+    border-radius: 6px;
+
+    height: 40px;
+	width: 40px;
+    margin: auto;
+}
+
+/* settings */
+.settings {
+    background-color: #273549;
+    padding: 20px;
+    box-shadow: 0px 2px 15px rgba(252, 91, 198, 0.7);
+    color: white;
+}
+
+.settings.theme-dark {
+    background-color: white;
+}
+
+input[type=checkbox] {
+	margin-right: 0;
+}
+
+.setting {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 15px 0;
+}
+
+@media screen and (max-width: 400px) {
+	.result-container {
+		font-size: 14px;
+	}
+}
+
+
+/* SOCIAL PANEL CSS */
+.social-panel-container {
+	position: fixed;
+	right: 0;
+	bottom: 80px;
+	transform: translateX(100%);
+	transition: transform 0.4s ease-in-out;
+}
+
+.social-panel-container.visible {
+	transform: translateX(-10px);
+}
+
+.social-panel {	
+	background-color: #fff;
+	border-radius: 16px;
+	box-shadow: 0 16px 31px -17px rgba(0,31,97,0.6);
+	border: 5px solid #001F61;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-family: 'Muli', sans-serif;
+	position: relative;
+	height: 169px;	
+	width: 370px;
+	max-width: calc(100% - 10px);
+}
+
+.social-panel button.close-btn {
+	border: 0;
+	color: #97A5CE;
+	cursor: pointer;
+	font-size: 20px;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+}
+
+.social-panel button.close-btn:focus {
+	outline: none;
+}
+
+.social-panel p {
+	background-color: #001F61;
+	border-radius: 0 0 10px 10px;
+	color: #fff;
+	font-size: 14px;
+	line-height: 18px;
+	padding: 2px 17px 6px;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin: 0;
+	transform: translateX(-50%);
+	text-align: center;
+	width: 235px;
+}
+
+.social-panel p i {
+	margin: 0 5px;
+}
+
+.social-panel p a {
+	color: #FF7500;
+	text-decoration: none;
+}
+
+.social-panel h4 {
+	margin: 20px 0;
+	color: #97A5CE;	
+	font-family: 'Muli';	
+	font-size: 14px;	
+	line-height: 18px;
+	text-transform: uppercase;
+}
+
+.social-panel ul {
+	display: flex;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+.social-panel ul li {
+	margin: 0 10px;
+}
+
+.social-panel ul li a {
+	border: 1px solid #DCE1F2;
+	border-radius: 50%;
+	color: #001F61;
+	font-size: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50px;
+	width: 50px;
+	text-decoration: none;
+}
+
+.social-panel ul li a:hover {
+	border-color: #FF6A00;
+	box-shadow: 0 9px 12px -9px #FF6A00;
+}
+
+.floating-btn {
+	border-radius: 26.5px;
+	background-color: #001F61;
+	border: 1px solid #001F61;
+	box-shadow: 0 16px 22px -17px #03153B;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	line-height: 20px;
+	padding: 12px 20px;
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	z-index: 999;
+}
+
+.floating-btn:hover {
+	background-color: #ffffff;
+	color: #001F61;
+}
+
+.floating-btn:focus {
+	outline: none;
+}
+
+.floating-text {
+	background-color: #001F61;
+	border-radius: 10px 10px 0 0;
+	color: #fff;
+	font-family: 'Muli';
+	padding: 7px 15px;
+	position: fixed;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	text-align: center;
+	z-index: 998;
+}
+
+.floating-text a {
+	color: #FF7500;
+	text-decoration: none;
+}
+
+.netlify img{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 25px;
+	width: 25px;
+}
+
+@media screen and (max-width: 480px) {
+
+	.social-panel-container.visible {
+		transform: translateX(0px);
+	}
+	
+	.floating-btn {
+		right: 10px;
+	}
 }
